# plank-reloaded

./: .gitignore  404.html  AUTHORS  CNAME  COPYRIGHT  DOCKLETS.md  HACKING  HACKING.md  INSTALL  Makefile.am  NEWS.md  README.md  _config.yml  autogen.sh  bootstrap  configure.ac  flake.nix  index.md  meson.build  meson_options.txt  site.webmanifest
data/icons/: Makefile.am
data/themes/: Makefile.am
data/themes/Default/: dock.theme
data/themes/Matte/: dock.theme
data/themes/Matte-Light/: dock.theme
data/themes/Minimal/: dock.theme
data/themes/Minimal-Light/: dock.theme
data/themes/Transparent/: dock.theme
docklets/Applications/: ApplicationsDockItem.vala  ApplicationsDocklet.vala  ApplicationsPreferences.vala  Makefile.am  meson.build
docklets/Clippy/: ClippyClipboardItem.vala  ClippyDockItem.vala  ClippyDocklet.vala  ClippyPreferences.vala  HOTKEY_IMPLEMENTATION.md  Makefile.am  README.md  meson.build
docklets/Notifications/: NotificationsDockItem.vala  NotificationsDocklet.vala  NotificationsPreferences.vala  meson.build
docklets/Workspaces/: WorkspacesDockItem.vala  WorkspacesDocklet.vala  WorkspacesPreferences.vala  meson.build
docs/: meson.build  plank.1  plank.h2m
docs/c-doc/: plank-reloaded-decl-list.txt  plank-reloaded-decl.txt  plank-reloaded-docs.xml  plank-reloaded-sections.txt  plank-reloaded-undeclared.txt  plank-reloaded-undocumented.txt  plank-reloaded-unused.txt
docs/c-doc/ccomments/: AbstractMain.c  ApplicationDockItem.c  ApplicationDockItemProvider.c  Client.c  Color.c  CompositedWindow.c  DBusManager.c  DefaultApplicationDockItemProvider.c  DockContainer.c  DockController.c  DockElement.c  DockItem.c  DockItemDrawValue.c  DockItemPreferences.c  DockItemProvider.c  DockPreferences.c  DockRenderer.c  DockTheme.c  DockWindow.c  Docklet.c  DockletItem.c  DockletManager.c  DragManager.c  DrawingService.c  Easing.c  Enums.c  Environment.c  Factory.c  FileDockItem.c  Helpers.c  HideManager.c  HoverWindow.c  ItemFactory.c  Logger.c  Paths.c  PlaceholderDockItem.c  PlankDockItem.c  PoofWindow.c  PositionManager.c  Preferences.c  (+12 more)
docs/c-doc/html/: annotation-glossary.html  api-index-full.html  ch01.html  index.html  plank-reloaded-Color.html  plank-reloaded-Easing.html  plank-reloaded-Enums.html  plank-reloaded-Environment.html  plank-reloaded-Helpers.html  plank-reloaded-PlankAbstractMain.html  plank-reloaded-PlankApplicationDockItem.html  plank-reloaded-PlankApplicationDockItemProvider.html  plank-reloaded-PlankCompositedWindow.html  plank-reloaded-PlankDBusClient.html  plank-reloaded-PlankDBusManager.html  plank-reloaded-PlankDefaultApplicationDockItemProvider.html  plank-reloaded-PlankDockContainer.html  plank-reloaded-PlankDockController.html  plank-reloaded-PlankDockElement.html  plank-reloaded-PlankDockItem.html  plank-reloaded-PlankDockItemDrawValue.html  plank-reloaded-PlankDockItemPreferences.html  plank-reloaded-PlankDockItemProvider.html  plank-reloaded-PlankDockPreferences.html  plank-reloaded-PlankDockRenderer.html  plank-reloaded-PlankDockTheme.html  plank-reloaded-PlankDockWindow.html  plank-reloaded-PlankDocklet.html  plank-reloaded-PlankDockletItem.html  plank-reloaded-PlankDockletManager.html  plank-reloaded-PlankDragManager.html  plank-reloaded-PlankDrawingService.html  plank-reloaded-PlankFactory.html  plank-reloaded-PlankFileDockItem.html  plank-reloaded-PlankFileDockItemFileSortData.html  plank-reloaded-PlankHideManager.html  plank-reloaded-PlankHoverWindow.html  plank-reloaded-PlankItemFactory.html  plank-reloaded-PlankLogger.html  plank-reloaded-PlankPaths.html  (+18 more)
docs/c-doc/xml/: AbstractMain.xml  ApplicationDockItem.xml  ApplicationDockItemProvider.xml  Client.xml  Color.xml  CompositedWindow.xml  DBusManager.xml  DefaultApplicationDockItemProvider.xml  DockContainer.xml  DockController.xml  DockElement.xml  DockItem.xml  DockItemDrawValue.xml  DockItemPreferences.xml  DockItemProvider.xml  DockPreferences.xml  DockRenderer.xml  DockTheme.xml  DockWindow.xml  Docklet.xml  DockletItem.xml  DockletManager.xml  DragManager.xml  DrawingService.xml  Easing.xml  Enums.xml  Environment.xml  Factory.xml  FileDockItem.xml  Helpers.xml  HideManager.xml  HoverWindow.xml  ItemFactory.xml  Logger.xml  Paths.xml  PlaceholderDockItem.xml  PlankDockItem.xml  PoofWindow.xml  PositionManager.xml  Preferences.xml  (+15 more)
docs/vala-doc/atk/: Atk.Action.do_action.html  Atk.Action.get_description.html  Atk.Action.get_keybinding.html  Atk.Action.get_localized_name.html  Atk.Action.get_n_actions.html  Atk.Action.get_name.html  Atk.Action.html  Atk.Action.set_description.html  Atk.Attribute.html  Atk.Attribute.name.html  Atk.Attribute.set_free.html  Atk.Attribute.value.html  Atk.AttributeSet.html  Atk.BINARY_AGE.html  Atk.Component.add_focus_handler.html  Atk.Component.bounds_changed.html  Atk.Component.contains.html  Atk.Component.get_alpha.html  Atk.Component.get_extents.html  Atk.Component.get_layer.html  Atk.Component.get_mdi_zorder.html  Atk.Component.get_position.html  Atk.Component.get_size.html  Atk.Component.grab_focus.html  Atk.Component.html  Atk.Component.ref_accessible_at_point.html  Atk.Component.remove_focus_handler.html  Atk.Component.scroll_to.html  Atk.Component.scroll_to_point.html  Atk.Component.set_extents.html  Atk.Component.set_position.html  Atk.Component.set_size.html  Atk.CoordType.PARENT.html  Atk.CoordType.SCREEN.html  Atk.CoordType.WINDOW.html  Atk.CoordType.html  Atk.Document.get_attribute_value.html  Atk.Document.get_attributes.html  Atk.Document.get_current_page_number.html  Atk.Document.get_document.html  (+671 more)
docs/vala-doc/cairo/: Cairo.Antialias.BEST.html  Cairo.Antialias.DEFAULT.html  Cairo.Antialias.FAST.html  Cairo.Antialias.GOOD.html  Cairo.Antialias.GRAY.html  Cairo.Antialias.NONE.html  Cairo.Antialias.SUBPIXEL.html  (+690 more)
docs/vala-doc/cairo-gobject/: cairo-gobject.devhelp2  index.htm
docs/web-doc/: index.html
tests/: Controller.vala  Dock.vala  Drawing.vala  Items.vala  Main.vala  Preferences.vala  Services.vala  TestHelper.vala  Widgets.vala  meson.build  test-config.vapi
tests/gmock/: color.cpp  main.cpp
(+53575 files in other folders)
