pkgicon16dir = @datadir@/icons/hicolor/16x16/apps
dist_pkgicon16_DATA = 16x16/plank-reloaded.png

pkgicon22dir = @datadir@/icons/hicolor/22x22/apps
dist_pkgicon22_DATA = 22x22/plank-reloaded.png

pkgicon24dir = @datadir@/icons/hicolor/24x24/apps
dist_pkgicon24_DATA = 24x24/plank-reloaded.png

pkgicon32dir = @datadir@/icons/hicolor/32x32/apps
dist_pkgicon32_DATA = 32x32/plank-reloaded.png

pkgicon48dir = @datadir@/icons/hicolor/48x48/apps
dist_pkgicon48_DATA = 48x48/plank-reloaded.png

pkgicon64dir = @datadir@/icons/hicolor/64x64/apps
dist_pkgicon64_DATA = 64x64/plank-reloaded.png

pkgicon128dir = @datadir@/icons/hicolor/128x128/apps
dist_pkgicon128_DATA = 128x128/plank-reloaded.png

pkgicon256dir = @datadir@/icons/hicolor/256x256/apps
dist_pkgicon256_DATA = 256x256/plank-reloaded.png

pkgicon512dir = @datadir@/icons/hicolor/512x512/apps
dist_pkgicon512_DATA = 512x512/plank-reloaded.png
