NULL =

defaultthemedir = $(pkgdatadir)/themes/Default
dist_defaulttheme_DATA = \
	Default/dock.theme \
	$(NULL)

mattethemedir = $(pkgdatadir)/themes/Matte
dist_mattetheme_DATA = \
	Matte/dock.theme \
	$(NULL)

mattelightthemedir = $(pkgdatadir)/themes/Matte-Light
dist_mattelighttheme_DATA = \
	Matte-Light/dock.theme \
	$(NULL)

transparentthemedir = $(pkgdatadir)/themes/Transparent
dist_transparenttheme_DATA = \
	Transparent/dock.theme \
	$(NULL)
